# MPIMastermindSolver

./: CMakeCache.txt  CMakeLists.txt  Challenger.cpp  Challenger.h  Evaluation.cpp  Evaluation.h  Gamemaster.cpp  Gamemaster.h  Guess.cpp  Guess.h  Makefile  README.md  Range.cpp  Range.h  Utils.cpp  Utils.h  cmake_install.cmake  main.cpp  tests.py  utils.cpp
src/: Challenger.h  Evaluation.cpp  Guess.cpp  Range.cpp  Utils.h  main.cpp
